Update frontend and fix bugs.
I know I shouldn't squash this many things down to one commit.
I know, but I'm doing it anyways.

* Replace 'EIN' text with a 'EIN/Tax ID' link to wiki page.
* Decapitalize for stylistic integrity.
* Change language from 'search' to 'enter'.
* Fix 'discuss' link shifting when button text changes.
* Handle HTML entities in title and tag line.
* Use user preference for opening link in new tab on discuss link.
* Change account age cutoff to Feb 16, 2015.
* Replace search button text with loading throbber while request in progress.
* Clear current results when clearing search input.
* Fix results showing up after deleting query.
* Fix nominations api call being broken when traling slash is in URL.

--- a/reddit_donate/public/static/css/donate.less
+++ b/reddit_donate/public/static/css/donate.less
@@ -256,6 +256,11 @@ a {
   .search-button {
     font-size: 1.3em;
 
+    .throbber {
+      display: inline-block;
+      vertical-align: middle;
+    }
+
     &.manual {
       .button-style(darken(@green, 5%), @off-white);
     }
@@ -288,6 +293,7 @@ a {
 
   small {
     display: block;
+    font-size: (@font-medium * 1px);
   }
 }
 
@@ -378,7 +384,7 @@ a {
 
     .discuss-link {
       display: block;
-      text-align: center;
+      text-align: right;
       margin-top: (@margin-small * 1px);
     }
   }
